--- a/public/index.html
+++ b/public/index.html
@@ -992,7 +992,7 @@
           </div>
           <hr class="text-900" />
           <div class="row">
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
+            <div class="col-6 col-md-4 col-lg-3 col-xxl-2 mb-3">
               <h5 class="lh-lg fw-bold text-white">COMPANY</h5>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
                 <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">About Us</a></li>
@@ -1001,7 +1001,7 @@
                 <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">blog</a></li>
               </ul>
             </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
+            <div class="col-6 col-md-4 col-lg-3 col-xxl-2 col-lg-3 mb-3">
               <h5 class="lh-lg fw-bold text-white">CONTACT</h5>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
                 <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Help &amp; Support</a></li>
@@ -1010,7 +1010,7 @@
                 <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Ride with us</a></li>
               </ul>
             </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
+            <div class="col-6 col-md-4 col-lg-3 col-xxl-2 mb-3">
               <h5 class="lh-lg fw-bold text-white">LEGAL</h5>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
                 <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Terms &amp; Conditions</a></li>
@@ -1019,7 +1019,7 @@
                 <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Cookie Policy</a></li>
               </ul>
             </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
+            <div class="col-6 col-md-4 col-lg-3 col-xxl-2 mb-3">
               <h5 class="lh-lg fw-bold text-white">LEGAL</h5>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
                 <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Terms &amp; Conditions</a></li>
@@ -1027,7 +1027,7 @@
                 <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Privacy Policy</a></li>
               </ul>
             </div>
-            <div class="col-12 col-md-8 col-lg-6">
+            <div class="col-12 col-md-8 col-lg-6 col-xxl-4">
               <h5 class="lh-lg fw-bold text-500">FOLLOW US</h5>
               <div class="text-start my-3"> <a href="#!">
                   <svg class="svg-inline--fa fa-instagram fa-w-14 fs-2 me-2" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="instagram" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
