--- a/public/index.html
+++ b/public/index.html
@@ -118,8 +118,10 @@
                   <div class="card-actions">
                     <div class="badge badge-foodwagon bg-primary p-4">
                       <div class="d-flex flex-between-center">
-                        <div class="text-white fs-7">15</div><span class="text-white fs-2">%  <br/>
-                          <div class="fw-normal fs-1 mt-2">Off</div></span>
+                        <div class="text-white fs-7">15</div>
+                        <div class="d-block text-white fs-2">% <br />
+                          <div class="fw-normal fs-1 mt-2">Off</div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -135,8 +137,10 @@
                   <div class="card-actions">
                     <div class="badge badge-foodwagon bg-primary p-4">
                       <div class="d-flex flex-between-center">
-                        <div class="text-white fs-7">10</div><span class="text-white fs-2">%  <br/>
-                          <div class="fw-normal fs-1 mt-2">Off</div></span>
+                        <div class="text-white fs-7">10</div>
+                        <div class="d-block text-white fs-2">% <br />
+                          <div class="fw-normal fs-1 mt-2">Off</div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -152,8 +156,10 @@
                   <div class="card-actions">
                     <div class="badge badge-foodwagon bg-primary p-4">
                       <div class="d-flex flex-between-center">
-                        <div class="text-white fs-7">25</div><span class="text-white fs-2">%  <br/>
-                          <div class="fw-normal fs-1 mt-2">Off</div></span>
+                        <div class="text-white fs-7">25</div>
+                        <div class="d-block text-white fs-2">% <br />
+                          <div class="fw-normal fs-1 mt-2">Off</div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -169,8 +175,10 @@
                   <div class="card-actions">
                     <div class="badge badge-foodwagon bg-primary p-4">
                       <div class="d-flex flex-between-center">
-                        <div class="text-white fs-7">20</div><span class="text-white fs-2">%  <br/>
-                          <div class="fw-normal fs-1 mt-2">Off</div></span>
+                        <div class="text-white fs-7">20</div>
+                        <div class="d-block text-white fs-2">% <br />
+                          <div class="fw-normal fs-1 mt-2">Off</div>
+                        </div>
                       </div>
                     </div>
                   </div>
